# doublezero-offchain

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  RELEASE.md  release-plz.toml
.github/workflows/: changelog-reminder.yml  ci.yml  local-validator.yml  release-plz.yml  release.scheduler.yml
crates/contributor-rewards/: .env.example  CHANGELOG.md  Cargo.toml  example.config.toml  test.config.toml
crates/contributor-rewards/src/: lib.rs  main.rs
crates/contributor-rewards/src/calculator/: data_prep.rs  input.rs  keypair_loader.rs  ledger_operations.rs  mod.rs  orchestrator.rs  proof.rs  recorder.rs  revenue_distribution.rs  shapley_aggregator.rs  shapley_handler.rs  util.rs  write_config.rs
crates/contributor-rewards/src/calculator/shapley/: evaluator.rs  mod.rs
crates/contributor-rewards/src/cli/: common.rs  export.rs  impls.rs  inspect.rs  mod.rs  rewards.rs  scheduler.rs  snapshot.rs  telemetry.rs  traits.rs
crates/contributor-rewards/src/ingestor/: demand.rs  epoch.rs  fetcher.rs  inet_accumulator.rs  internet.rs  serviceability.rs  telemetry.rs  types.rs
crates/contributor-rewards/src/processor/: internet.rs  process.rs  stats.rs  telemetry.rs  util.rs
crates/contributor-rewards/src/scheduler/: state.rs  worker.rs
crates/contributor-rewards/src/settings/: aws.rs  mod.rs  network.rs  validation.rs
crates/contributor-rewards/src/storage/: credentials.rs  local.rs  mod.rs  s3.rs
crates/contributor-rewards/tests/: test_demand.rs  test_pub_links.rs  test_pvt_links.rs  test_s3_storage.rs  test_sanity.rs  test_telemetry_defaults.rs
crates/contributor-rewards/tests/common/: mod.rs
crates/scheduled-command/: CHANGELOG.md  Cargo.toml
crates/sentinel/: CHANGELOG.md  Cargo.toml
crates/sentinel/src/: constants.rs  error.rs  lib.rs  main.rs  settings.rs
crates/sentinel/src/client/: doublezero_ledger.rs  solana.rs
crates/sentinel/src/sentinel/: handler.rs  mod.rs  poller.rs  verification.rs
crates/slack-notifier/: CHANGELOG.md  Cargo.toml
crates/slack-notifier/src/: contributor_rewards.rs  lib.rs  slack.rs  validator_debt.rs
crates/solana-admin-cli/passport/: CHANGELOG.md
crates/solana-admin-cli/passport/src/: command.rs
crates/solana-admin-cli/revenue-distribution/: CHANGELOG.md  Cargo.toml
crates/solana-admin-cli/revenue-distribution/src/: command.rs
crates/solana-admin-cli/sol-conversion/: CHANGELOG.md  Cargo.toml
crates/solana-admin-cli/sol-conversion/src/: command.rs  main.rs
crates/solana-admin/passport-cli/: Cargo.toml
crates/solana-admin/passport-cli/src/: main.rs
crates/solana-admin/revenue-distribution-cli/src/: command.rs  main.rs
crates/solana-cli/: CHANGELOG.md  Cargo.toml
crates/solana-cli/src/: main.rs  utils.rs
crates/solana-cli/src/command/: mod.rs
crates/solana-cli/src/command/passport/: access_validation.rs  fetch.rs  find_validator.rs  mod.rs  prepare_access.rs  request_access.rs
crates/solana-cli/src/command/revenue_distribution/: configure_contributor_rewards.rs  contributor_rewards.rs  convert_2z.rs  fetch.rs  mod.rs  relay.rs  validator_deposit.rs
crates/solana-cli/src/command/revenue_distribution/fetch/: config.rs  contributor_rewards.rs  distribution.rs  journal.rs  mod.rs  sol_conversion.rs  validator_debts.rs  validator_deposits.rs
crates/solana-cli/src/command/revenue_distribution/harvest_2z/: mod.rs
crates/solana-cli/src/command/revenue_distribution/harvest_2z/jupiter/: client.rs  mod.rs  quote.rs  swap_instructions.rs
crates/solana-cli/src/command/revenue_distribution/relay/: distribute_rewards.rs  finalize_distribution_rewards.rs  mod.rs  sweep_distribution_tokens.rs
crates/solana-client-tools/: CHANGELOG.md  Cargo.toml
crates/solana-client-tools/examples/: get_blocks.rs
crates/solana-client-tools/src/: instruction.rs  lib.rs  log.rs  payer.rs  rpc.rs  transaction.rs  zero_copy.rs
crates/solana-client-tools/src/account/: mod.rs  record.rs  zero_copy.rs
crates/solana-client-tools/src/keypair/: error.rs  loader.rs  mod.rs  source.rs
crates/solana-fork/: CHANGELOG.md  Cargo.toml
crates/solana-fork/src/: main.rs
crates/solana-interface/sol-conversion/: CHANGELOG.md  Cargo.toml
crates/solana-interface/sol-conversion/src/: lib.rs  oracle.rs
crates/solana-interface/sol-conversion/src/instruction/: account.rs  mod.rs
crates/solana-interface/sol-conversion/src/state/: configuration_registry.rs  deny_list_registry.rs  fills_registry.rs  mod.rs  program_state.rs
crates/solana-sdk/: CHANGELOG.md  Cargo.toml
crates/solana-sdk/src/: lib.rs
crates/solana-sdk/src/passport/: mod.rs
crates/solana-sdk/src/revenue_distribution/: compute_unit.rs  fetch.rs  mod.rs
crates/validator-debt/: CHANGELOG.md  Cargo.toml
crates/validator-debt/src/: block.rs  inflation.rs  jito.rs  ledger.rs  lib.rs  main.rs  rewards.rs  rpc.rs  s3_fetcher.rs  solana_debt_calculator.rs  transaction.rs  validator_debt.rs  worker.rs
crates/validator-debt/src/command/: calculate.rs  export_validators.rs  initialize.rs  mod.rs  verify.rs
crates/validator-debt/src/worker/: initialize_distribution.rs  mod.rs  pause_gate.rs  slack_report.rs
release/: .goreleaser.contributor-rewards.yaml  .goreleaser.doublezero-offchain-scheduler.yaml  .goreleaser.doublezero-solana-cli.yaml  .goreleaser.doublezero-solana-validator-debt.yaml  .goreleaser.sentinel.yaml
release/packaging/systemd/: doublezero-contributor-rewards.service  doublezero-offchain-scheduler.service  doublezero-sentinel.service  doublezero-solana-validator-debt.service
scheduler/: .gitignore  CHANGELOG.md  README.md  mix.exs
scheduler/config/: config.exs  prod.exs  runtime.exs
scheduler/lib/scheduler/: application.ex  prom_ex.ex  router.ex  scheduler.ex  scheduler_doublezero.ex
scheduler/lib/scheduler/validator_debt/: debt_collection.ex
scheduler/lib/scheduler/worker/: calculate_distribution.ex  collect_all_debt.ex  (+2 more)
scheduler/native/scheduler_doublezero/: Cargo.toml  README.md
scheduler/native/scheduler_doublezero/src/: lib.rs
sh/: test_doublezero_solana_clean.sh  test_doublezero_solana_fork.sh  test_validator_debt_fork.sh
