[workspace]
members = [
    "crates/contributor-rewards",
    "crates/scheduled-command",
    "crates/sentinel",
    "crates/slack-notifier",
    "crates/solana-interface/sol-conversion",
    "crates/solana-admin-cli/passport",
    "crates/solana-admin-cli/revenue-distribution",
    "crates/solana-admin-cli/sol-conversion",
    "crates/solana-cli",
    "crates/solana-client-tools",
    "crates/solana-fork",
    "crates/solana-sdk",
    "crates/validator-debt",
    "scheduler/native/scheduler_doublezero"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Malbec Labs <dev@malbeclabs.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/doublezerofoundation/doublezero-offchain"
homepage = "https://github.com/doublezerofoundation/doublezero-offchain"

[workspace.dependencies]
anyhow = "1"
arrow = "57"
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
backon = "1"
base64 = "0.22"
bincode = "1"
bitvec = "1"
md5 = "0.8"
borsh = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = "0.15"
csv = "1"
dotenvy = "0.15"
futures = "0.3"
governor = "0.6"
home = "0.5"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
leaky-bucket = "1"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
mockall = "0.13"
parquet = { version = "57", features = [ "async" ] }
rayon = "1"
reqwest = { version = "0.12", features = ["json"] }
retainer = "0.4"
rust_decimal = { version = "1", features = ["serde", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder = "2"
solana-account-decoder-client-types = "2"
solana-client = "2"
solana-commitment-config = "2"
solana-instruction = "2"
solana-pubkey = { version = "2", features = ["borsh", "bytemuck"] }
solana-sanitize = "2"
solana-sdk = "2"
solana-system-interface = "1"
solana-transaction-status-client-types = "2"
spl-associated-token-account-interface = "1"
spl-token = { version = "8", features = ["no-entrypoint"] }
strum = { version = "0.27", features = ["derive"] }
svm-hash = { version = "0.1", features = ["bytemuck", "borsh"] }
tabled = { version = "0.20", features = ["std", "derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal"] }
tokio-cron-scheduler = "0.14"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter", "fmt", "registry"] }
url = "2"

### Dependencies found in github.com/doublezerofoundation/doublezero-solana

[workspace.dependencies.doublezero-passport]
features = ["offchain"]
git = "https://github.com/doublezerofoundation/doublezero-solana"
tag = "revenue-distribution/v0.2.0"

[workspace.dependencies.doublezero-program-tools]
git = "https://github.com/doublezerofoundation/doublezero-solana"
tag = "revenue-distribution/v0.2.0"

[workspace.dependencies.doublezero-revenue-distribution]
git = "https://github.com/doublezerofoundation/doublezero-solana"
tag = "revenue-distribution/v0.2.0"

### Dependencies found in github.com/malbeclabs/doublezero

[workspace.dependencies.doublezero-program-common]
git = "https://github.com/malbeclabs/doublezero"
rev="fd78b9af"

[workspace.dependencies.doublezero-record]
features = ["no-entrypoint"]
git = "https://github.com/malbeclabs/doublezero"
rev="fd78b9af"

[workspace.dependencies.doublezero_sdk]
git = "https://github.com/malbeclabs/doublezero"
rev="fd78b9af"

[workspace.dependencies.doublezero-serviceability]
features = ["no-entrypoint", "serde"]
git = "https://github.com/malbeclabs/doublezero"
rev="fd78b9af"

[workspace.dependencies.doublezero-telemetry]
features = ["no-entrypoint", "serde"]
git = "https://github.com/malbeclabs/doublezero"
rev="fd78b9af"

### Other git dependencies

[workspace.dependencies.network-shapley]
features = ["serde", "borsh"]
git = "https://github.com/doublezerofoundation/network-shapley-rs"
tag = "v0.3.0"

### Local dependencies

[workspace.dependencies.doublezero-contributor-rewards]
path = "crates/contributor-rewards"

[workspace.dependencies.doublezero-scheduled-command]
path = "crates/scheduled-command"

[workspace.dependencies.doublezero-ledger-sentinel]
path = "crates/sentinel"

[workspace.dependencies.doublezero-sol-conversion-interface]
features = ["serde"]
path = "crates/solana-interface/sol-conversion"

[workspace.dependencies.doublezero-solana-client-tools]
path = "crates/solana-client-tools"

[workspace.dependencies.doublezero-solana-sdk]
path = "crates/solana-sdk"

[workspace.dependencies.doublezero-solana-validator-debt]
path = "crates/validator-debt"

[workspace.dependencies.slack-notifier]
path = "crates/slack-notifier"

[profile.release]
lto = true
codegen-units = 1
