[package]
name = "doublezero-contributor-rewards"
readme = "README.md"
version = "0.2.1-rc1"

# Workspace inherited keys
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_contributor_rewards"
path = "src/lib.rs"

[[bin]]
name = "doublezero-contributor-rewards"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
backon.workspace = true
base64.workspace = true
bitvec.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
csv.workspace = true
dotenvy.workspace = true
md5.workspace = true
doublezero-record.workspace = true
doublezero-program-common.workspace = true
doublezero-program-tools.workspace = true
doublezero-revenue-distribution.workspace = true
doublezero_sdk.workspace = true
doublezero-serviceability.workspace = true
doublezero-telemetry.workspace = true
governor.workspace = true
indexmap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
network-shapley.workspace = true
itertools.workspace = true
rayon.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
svm-hash.workspace = true
tabled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
