[package]
name = "doublezero-solana-client-tools"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
bytemuck.workspace = true
clap.workspace = true
doublezero-program-tools.workspace = true
doublezero-scheduled-command.workspace = true
doublezero_sdk.workspace = true
home.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
thiserror.workspace = true
tracing = { optional = true, workspace = true }
url.workspace = true

[dev-dependencies]
leaky-bucket.workspace = true
solana-reward-info = "2"
solana-rpc-client-types = "2"
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[features]
tracing = ["dep:tracing"]
