[package]
name = "doublezero-solana-sdk"
description = "SDK for DoubleZero Smart Contracts on Solana"

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
doublezero-passport.workspace = true
doublezero-program-tools.workspace = true
doublezero-revenue-distribution.workspace = true
doublezero-sol-conversion-interface.workspace = true
doublezero-solana-client-tools.workspace = true
solana-sdk.workspace = true
spl-memo-interface.workspace = true
svm-hash.workspace = true