[package]
name = "doublezero-solana-validator-debt"
description = "Crate that processes debt for validators"
version = "0.1.0-rc6"

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
backon.workspace = true
bincode.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
doublezero-record.workspace = true
doublezero-serviceability.workspace = true
doublezero_sdk.workspace = true
doublezero-solana-client-tools.workspace = true
doublezero-solana-sdk.workspace = true
futures.workspace = true
leaky-bucket.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mockall.workspace = true
parquet.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
slack-notifier.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
tabled.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
