[package]
name = "doublezero-sol-conversion-admin-cli"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
doublezero-program-tools.workspace = true
doublezero-revenue-distribution.workspace = true
doublezero-sol-conversion-interface.workspace = true
doublezero-solana-client-tools.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
tokio.workspace = true

[[bin]]
name = "doublezero-sol-conversion-admin"
path = "src/main.rs"
